# felizdiadopi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  config.py  db.py  main.py  model.py
tests/: conftest.py  test_app.py  test_basic.py  test_db.py
tests/integration/: test_app.py
tests/unit/: test_main.py
