[tool.poetry]
name = "felizdiadopi"
version = "0.1.0"
description = ""
authors = ["Edinho"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '-vvv --cov-report=term-missing --cov=api'
testpaths = ["tests"]

[tool.black]
line-length = 79
